--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --main-color: #8743cc;
   --main-color-darker: #4e1f7d;
+  --main-color-light: #9d5edb;
   --white: #fff;
   --gray: #ccc;
 }
@@ -26,10 +27,6 @@ nav {
   background-color: var(--main-color);
 }
 
-nav ul ul {
-  background-color: var(--main-color-darker);
-}
-
 nav ul li {
   color: var(--white);
   font-size: 20px;
@@ -37,17 +34,6 @@ nav ul li {
 
 nav ul li a {
   color: var(--white);
-}
-
-nav ul .category {
-  color: var(--white);
-  font-size: 20px;
-  padding-top: 10px;
-}
-
-nav ul .category:hover {
-  text-decoration: underline;
-  cursor: pointer;
 }
 
 a {
@@ -64,6 +50,30 @@ li {
 
 li ul {
   margin-left: 10px;
+}
+
+#home {
+  display: block;
+  padding: 10px;
+}
+
+.categoryName {
+  color: var(--white);
+  font-size: 20px;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.categoryList {
+  background-color: var(--main-color-darker);
+  margin-bottom: 10px;
+}
+
+nav ul .categoryName:hover,
+#home:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  background-color: var(--main-color-light);
 }
 
 h1,
