adding new styles on sidebar

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,6 @@
-$main-color: #8743cc;
-$main-color-darker: #4e1f7d;
-$main-color-light: #9d5edb;
+$purple1: #9a4ce9;
+$purple2: #8743cc;
+$purple3: #6e2daf;
+$purple4: #5d2694;
 $white: #fff;
 $gray: #ccc;
