--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,15 @@
 * {
   padding: 0;
   margin: 0;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 main {
