adding new styles on sidebar

--- a/src/styles/sideBar.scss
+++ b/src/styles/sideBar.scss
@@ -41,6 +41,11 @@ li {
     background-color: $purple1;
     text-decoration: none;
   }
+
+  svg {
+    font-size: 10pt;
+    margin-left: 8px;
+  }
 }
 
 .categoryItem {
