--- a/src/styles/sideBar.scss
+++ b/src/styles/sideBar.scss
@@ -3,16 +3,20 @@
 nav {
   position: fixed;
   display: flex;
-  align-items: center;
   justify-content: center;
   text-align: center;
   height: 100vh;
   width: 300px;
   background-color: $purple2;
+  overflow-y: auto;
 }
 
 li {
   list-style: none;
+}
+
+#home {
+  margin-top: 32px;
 }
 
 #home,
