--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,8 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 12pt;
+  font-family: 'Arimo', sans-serif;
 }
 
 a {
@@ -31,26 +32,32 @@ h6 {
 h1 {
   text-align: center;
   margin: 30px 0;
+  font-size: 24pt;
 }
 
 h2 {
   margin: 25px 0;
+  font-size: 22pt;
 }
 
 h3 {
   margin: 20px 0;
+  font-size: 20pt;
 }
 
 h4 {
   margin: 15px 0;
+  font-size: 18pt;
 }
 
 h5 {
   margin: 10px 0;
+  font-size: 16pt;
 }
 
 h6 {
   margin: 5px 0;
+  font-size: 14pt;
 }
 
 p {
