creating home and using array on json

--- a/src/styles/sideBar.scss
+++ b/src/styles/sideBar.scss
@@ -14,6 +14,12 @@ nav {
 li {
   list-style: none;
 }
+
 nav ul li a {
   color: $white;
+}
+
+nav ul li a img {
+  height: 56px;
+  width: 56px;
 }
