--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   font-size: 12pt;
-  font-family: 'Arimo', sans-serif;
+  font-family: "Arimo", sans-serif;
 }
 
 a {
@@ -83,8 +83,9 @@ pre {
   padding: 5px;
 }
 
-#markdown {
+main {
+  display: block;
   padding: 50px;
   margin-left: 300px;
-  width: 100%;
+  max-width: 100%;
 }
