--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 12pt;
+  font-size: 14pt;
   font-family: "Arimo", sans-serif;
 }
 
@@ -21,11 +21,7 @@ main {
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2 {
   border-bottom: 1px solid $gray;
 }
 
@@ -66,12 +62,17 @@ p {
 
 table {
   width: 100%;
+  border-collapse: collapse;
 }
 
 th,
 td {
   border: 1px solid $gray;
-  padding: 10px;
+  padding: 16px;
+}
+
+tr:nth-child(even) {
+  background-color: $gray2;
 }
 
 img {
@@ -79,9 +80,13 @@ img {
   max-width: 100%;
 }
 
-pre {
-  background-color: $gray;
-  padding: 5px;
+code {
+  background-color: $gray2;
+  padding: 3px;
+}
+
+pre code {
+  display: block;
 }
 
 main {
@@ -89,4 +94,8 @@ main {
   padding: 50px;
   margin-left: 300px;
   max-width: 100%;
+}
+
+li {
+  margin: 10px 0 0 32px;
 }
