adding few styles for code tag

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -83,10 +83,12 @@ img {
 code {
   background-color: $gray2;
   padding: 3px;
+  border-radius: 10px;
 }
 
 pre code {
   display: block;
+  padding: 10px;
 }
 
 main {
