--- a/src/styles/switchButton.scss
+++ b/src/styles/switchButton.scss
@@ -23,16 +23,6 @@
   opacity: 0;
   width: 0;
   height: 0;
-
-  &:checked + #slider {
-    background-color: $purple4;
-  }
-
-  &:checked + #slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
 }
 
 #slider {
@@ -43,20 +33,19 @@
   right: 0;
   bottom: 0;
   background-color: $gray;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
   border-radius: 34px;
+}
 
-  &:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: $white;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    border-radius: 50%;
-  }
+.checked {
+  background-color: $purple4 !important;
+}
+
+#circle {
+  position: absolute;
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: $white;
+  border-radius: 50%;
 }
