--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -112,6 +112,20 @@ hr {
   margin: 16px 0;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: $gray;
+}
+::-webkit-scrollbar-thumb {
+  background: $purple4;
+
+  &:hover {
+    background: $purple3;
+  }
+}
+
 #dark-theme {
   background-color: $black;
   color: $white;
