--- a/src/styles/sideBar.scss
+++ b/src/styles/sideBar.scss
@@ -2,17 +2,11 @@
 
 nav {
   position: fixed;
-  display: flex;
-  justify-content: center;
   text-align: center;
   height: 100vh;
   width: 300px;
   background-color: $purple2;
   overflow-y: auto;
-
-  ul {
-    font-size: 12pt;
-  }
 
   li {
     list-style: none;
@@ -28,7 +22,6 @@ nav {
 }
 
 #main-list {
-  width: 100%;
   margin: 10px;
 }
 
@@ -135,6 +128,20 @@ nav {
   opacity: 0.7;
   background: $purple4;
   color: $white;
+}
+
+#credits {
+  font-size: 10pt;
+  margin: 8px 0;
+
+  a {
+    font-size: 10pt;
+    text-decoration: underline;
+
+    &:hover {
+      color: $purple4 !important;
+    }
+  }
 }
 
 #model {
